--- a/setup.cfg
+++ b/setup.cfg
@@ -1,26 +1,25 @@
-[bdist_wheel]
-universal=0
-
 [flake8]
-exclude = .hg,.git,.tox
-ignore = W504,W601
-inline-quotes = "
+exclude = build,.git,.hg,.tox,.lib,__pycache__
+ignore = W503
 max-complexity = 10
-max-line-length = 119
+max-line-length = 120
+select = B,C,E,F,W,T4,B9
 show-source = true
 
 [isort]
-balanced_wrapping = true
 combine_as_imports = true
 default_section = THIRDPARTY
-force_sort_within_sections = true
+force_grid_wrap=0
 include_trailing_comma = true
-known_first_party = django
-line_length = 119
-multi_line_output = 5
+indent = 4
+known_third_party = django
+line_length = 120
+multi_line_output = 3
 not_skip = __init__.py
-order_by_type = False
-skip = .tox
+use_parentheses=True
 
 [metadata]
 license-file = LICENSE
+
+[bdist_wheel]
+universal = 0
