Update flake8 config

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,27 @@
 [flake8]
 exclude = build,.git,.hg,.tox,.lib,__pycache__
-ignore = W503
+ignore =
+    # Missing trailing comma (flake8-commas)
+    C812,
+    # Missing trailing comma in Python 3 (flake8-commas)
+    C813,
+    # Missing trailing comma in Python 2 (flake8-commas)
+    C814,
+    # Missing trailing comma in Python 3.5+ (flake8-commas)
+    C815,
+    # Missing trailing comma in Python 3.6+ (flake8-commas)
+    C816,
+    # Whitespace before ‘:’
+    E203,
+    # Do not use bare except, specify exception instead
+    E722,
+    # Line break occurred before a binary operator
+    W503,
+    # Line break occurred after a binary operator
+    W504,
+    # Do not use bare except (flake8-bugbear)
+    B001
+inline-quotes = "
 max-complexity = 10
 max-line-length = 120
 select = B,C,E,F,W,T4,B9
