Use declarative config in setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,41 @@
+[metadata]
+include_package_data = true
+name = django-serve
+version = attr: django_serve.__version__
+description = A gunicorn based django runserver command.
+long_description = file: README.md
+long_description_content_type = text/markdown
+author = Raffaele Salmaso
+url = https://bitbucket.org/rsalmaso/django-serve
+license = MIT License
+license_file = LICENSE
+classifiers =
+    Development Status :: 5 - Production/Stable
+    Intended Audience :: Developers
+    Framework :: Django
+    Framework :: Django :: 2.2
+    Framework :: Django :: 3.0
+    Framework :: Django :: 3.1
+    Natural Language :: English
+    License :: OSI Approved :: MIT License
+    Programming Language :: Python
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.5
+    Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: JavaScript
+
+[options]
+include_package_data = true
+install_requires =
+    gunicorn
+    gunicorn-color
+    inotify
+packages = find:
+python_requires = >=3.5
+zip_safe = false
+
 [flake8]
 exclude = build,.git,.hg,.tox,.lib,__pycache__
 ignore =
@@ -41,10 +79,6 @@ include_trailing_comma = True
 force_grid_wrap = 0
 use_parentheses = True
 ensure_newline_before_comments = True
-
-
-[metadata]
-license-file = LICENSE
 
 [bdist_wheel]
 universal = 0
