Move main public repo to github

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ description = A gunicorn based django runserver command.
 long_description = file: README.md
 long_description_content_type = text/markdown
 author = Raffaele Salmaso
-url = https://bitbucket.org/rsalmaso/django-serve
+url = https://github.com/rsalmaso/django-serve
 license = MIT License
 license_file = LICENSE
 classifiers =
