Add Django 3.2 support

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,6 +16,7 @@ classifiers =
     Framework :: Django :: 2.2
     Framework :: Django :: 3.0
     Framework :: Django :: 3.1
+    Framework :: Django :: 3.2
     Natural Language :: English
     License :: OSI Approved :: MIT License
     Programming Language :: Python
