Add django-serve shell command

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,6 +37,10 @@ packages = find:
 python_requires = >=3.6
 zip_safe = false
 
+[options.entry_points]
+console_scripts =
+    django-serve = django_serve.main:run
+
 [flake8]
 exclude = build,.git,.hg,.tox,.lib,__pycache__
 ignore =
