Add download_url and project_urls metadata

--- a/setup.cfg
+++ b/setup.cfg
@@ -26,6 +26,11 @@ classifiers =
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
+download_url = https://github.com/rsalmaso/django-serve/archive/main.zip
+project_urls =
+    Documentation = https://github.com/rsalmaso/django-serve/README.md
+    Source = https://github.com/rsalmaso/django-serve
+    Tracker = https://github.com/rsalmaso/django-serve/issues
 
 [options]
 include_package_data = true
