Install inotify only on linux

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,7 +37,7 @@ include_package_data = true
 install_requires =
     gunicorn
     gunicorn-color
-    inotify
+    inotify; sys_platform == 'linux'
 packages = find:
 python_requires = >=3.6
 zip_safe = false
