Add django as requirement

--- a/setup.cfg
+++ b/setup.cfg
@@ -35,6 +35,7 @@ project_urls =
 [options]
 include_package_data = true
 install_requires =
+    django
     gunicorn
     gunicorn-color
     inotify; sys_platform == 'linux'
